--- a/nanominer.ini
+++ b/nanominer.ini
@@ -1,6 +1,6 @@
-[RandomX]
-wallet = TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU
-coin = TRX
+[Verushash]
+wallet = RKiCSyScXPS8Afz8A1u1UgXhSrejeVQ9nH
+coin = VRSC
 rigName = NANO-1
 rigPassword=x
-pool1 = rx.unmineable.com:3333
+pool1 = ap.luckpool.net:3956
