--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [Verushash]
 wallet = RKiCSyScXPS8Afz8A1u1UgXhSrejeVQ9nH
 coin = VRSC
-rigName = NANO-1
-rigPassword = x
+rigName = NANO1
+rigPassword=x
+cpuThreads=4
 pool1 = ap.luckpool.net:3956
