--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
-[Verushash]
-wallet = RKiCSyScXPS8Afz8A1u1UgXhSrejeVQ9nH
-coin = VRSC
+[randomx]
+wallet = TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU
+coin = TRX
 rigName = NANO1
 rigPassword=x
-cpuThreads=4
-pool1 = ap.luckpool.net:3956
+cpuThreads=2
+pool1 = rx.unmineable.com:3333
