--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [randomx]
-wallet = TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU
+wallet = TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU
 coin = TRX
 rigName = NANO1
 rigPassword=x
