--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
-[randomx]
+[etchash]
 wallet = TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU
 coin = TRX
 rigName = NANO1
 rigPassword=x
 cpuThreads=2
-pool1 = rx.unmineable.com:3333
+pool1 = etchash.unmineable.com:3333
