--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,5 @@
-[etchash]
-wallet = TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU
-coin = TRX
-rigName = NANO1
-rigPassword=x
-cpuThreads=2
-pool1 = etchash.unmineable.com:3333
+[autolykos]
+wallet=9i86UvXPZnUUm22BpehP9jmGgqzo1Jphv9rZh1tJaf7kbJx9a2r
+coin=Ergo
+rigName=K80
+email=guzt.a100@gmail.com
