--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [autolykos]
 wallet=9i86UvXPZnUUm22BpehP9jmGgqzo1Jphv9rZh1tJaf7kbJx9a2r
-coin=Ergo
+coin=ERG
 rigName=K80
 email=guzt.a100@gmail.com
+sortPools=true
