Update and rename config.ini to config_ergo.ini

--- a/config_ergo.ini
+++ b/config_ergo.ini
@@ -1,6 +1,6 @@
 [autolykos]
 wallet=9i86UvXPZnUUm22BpehP9jmGgqzo1Jphv9rZh1tJaf7kbJx9a2r
-coin=ERG
+coin=ergo
 rigName=K80
 email=guzt.a100@gmail.com
 sortPools=true
