--- a/config.json
+++ b/config.json
@@ -1,7 +1,4 @@
 {
-    "access-log-file": null,
-    "access-password": null,
-    "algo-ext": true,
     "api": {
         "id": null,
         "worker-id": null
@@ -13,26 +10,56 @@
         "access-token": null,
         "restricted": true
     },
+    "autosave": true,
     "background": false,
-    "bind": [
-        {
-            "host": "10.146.26.230",
-            "port": 3333,
-            "tls": false
-        },
-        {
-            "host": "::",
-            "port": 3333,
-            "tls": false
-        }
-    ],
     "colors": true,
     "title": true,
-    "custom-diff": 0,
-    "custom-diff-stats": false,
-    "donate-level": 0,
+    "randomx": {
+        "init": -1,
+        "init-avx2": -1,
+        "mode": "auto",
+        "1gb-pages": false,
+        "rdmsr": true,
+        "wrmsr": true,
+        "cache_qos": false,
+        "numa": true,
+        "scratchpad_prefetch_mode": 1
+    },
+    "cpu": {
+        "enabled": true,
+        "huge-pages": true,
+        "huge-pages-jit": false,
+        "hw-aes": null,
+        "priority": null,
+        "memory-pool": false,
+        "yield": true,
+        "max-threads-hint": 100,
+        "asm": true,
+        "argon2-impl": null,
+        "astrobwt-max-size": 550,
+        "astrobwt-avx2": false,
+        "cn/0": false,
+        "cn-lite/0": false
+    },
+    "opencl": {
+        "enabled": false,
+        "cache": true,
+        "loader": null,
+        "platform": "AMD",
+        "adl": true,
+        "cn/0": false,
+        "cn-lite/0": false
+    },
+    "cuda": {
+        "enabled": false,
+        "loader": null,
+        "nvml": true,
+        "cn/0": false,
+        "cn-lite/0": false
+    },
+    "donate-level": 1,
+    "donate-over-proxy": 1,
     "log-file": null,
-    "mode": "nicehash",
     "pools": [
         {
             "algo": null,
@@ -41,18 +68,25 @@
             "user": "TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU.T4",
             "pass": "x",
             "rig-id": null,
+            "nicehash": false,
             "keepalive": false,
             "enabled": true,
             "tls": false,
             "tls-fingerprint": null,
-            "daemon": false
+            "daemon": false,
+            "socks5": null,
+            "self-select": null,
+            "submit-to-origin": false
         }
     ],
-    "retries": 2,
-    "retry-pause": 1,
-    "reuse-timeout": 0,
+    "print-time": 60,
+    "health-print-time": 60,
+    "dmi": true,
+    "retries": 5,
+    "retry-pause": 5,
+    "syslog": false,
     "tls": {
-        "enabled": true,
+        "enabled": false,
         "protocols": null,
         "cert": null,
         "cert_key": null,
@@ -61,8 +95,8 @@
         "dhparam": null
     },
     "user-agent": null,
-    "syslog": false,
-    "verbose": false,
+    "verbose": 0,
     "watch": true,
-    "workers": true
+    "pause-on-battery": false,
+    "pause-on-active": false
 }
