--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
     },
     "http": {
         "enabled": false,
-        "host": "10.146.26.230",
-        "port": 3333,
+        "host": "127.0.0.1",
+        "port": 0,
         "access-token": null,
         "restricted": true
     },
@@ -62,10 +62,10 @@
     "log-file": null,
     "pools": [
         {
-            "algo": null,
+            "algo": "rx",
             "coin": null,
-            "url": "rx.unmineable.com:3333",
-            "user": "TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU.T4",
+            "url": "51.79.146.91:3333",
+            "user": "TRX:TJLovCKGu5PmSs6gH11w9iQvpRJ49u48NU",
             "pass": "x",
             "rig-id": null,
             "nicehash": false,
